--- a/index.html
+++ b/index.html
@@ -32,12 +32,21 @@
             margin-bottom: 15px;
         }
         .section {
-            text-align: left;
+            display: flex;
+            align-items: center;
             margin-bottom: 30px;
+            justify-content: space-between;
+        }
+        .section img {
+            width: 400px; /* Ajusta el tamaño de la imagen */
+            height: auto;
+            margin-left: 20px; /* Espacio entre el texto y la imagen */
         }
         .section ul {
+            text-align: left;
             list-style-type: disc;
             margin-left: 20px;
+            flex: 1;
         }
         #start-button {
             padding: 15px 30px;
@@ -67,67 +76,76 @@
 
         <!-- Sección de Frases de Empatía -->
         <div class="section">
-            <h2>Frases de Empatía</h2>
-            <ul>
-                <li>Sé la molestia que esto le causa</li>
-                <li>Voy a buscar la solución</li>
-                <li>Sé que no es sencillo</li>
-                <li>Lo escucho</li>
-                <li>Es válido sentirse así</li>
-                <li>Es comprensible que sienta eso</li>
-                <li>Buscaremos la solución</li>
-                <li>Lo acompañaré</li>
-                <li>Estoy aquí para ayudarlo</li>
-                <li>Debió ser complicado</li>
-                <li>Entiendo cómo se siente</li>
-                <li>Comprendo su frustración</li>
-                <li>Debe ser difícil para usted</li>
-                <li>Gracias por compartir sus sentimientos</li>
-            </ul>
+            <div class="text">
+                <h2>Frases de Empatía</h2>
+                <ul>
+                    <li>Sé la molestia que esto le causa</li>
+                    <li>Voy a buscar la solución</li>
+                    <li>Sé que no es sencillo</li>
+                    <li>Lo escucho</li>
+                    <li>Es válido sentirse así</li>
+                    <li>Es comprensible que sienta eso</li>
+                    <li>Buscaremos la solución</li>
+                    <li>Lo acompañaré</li>
+                    <li>Estoy aquí para ayudarlo</li>
+                    <li>Debió ser complicado</li>
+                    <li>Entiendo cómo se siente</li>
+                    <li>Comprendo su frustración</li>
+                    <li>Debe ser difícil para usted</li>
+                    <li>Gracias por compartir sus sentimientos</li>
+                </ul>
+            </div>
+            <img src="imagen11.png" alt="Empatía">
         </div>
 
         <!-- Sección de Frases de Cierre -->
         <div class="section">
-            <h2>Frases de Cierre</h2>
-            <ul>
-                <li>Qué bueno fue poder ayudarlo/a</li>
-                <li>Gracias por su tiempo</li>
-                <li>Agradezco su paciencia</li>
-                <li>Sé que no volverá a ocurrir</li>
-                <li>Fue muy importante brindarle apoyo</li>
-                <li>Gracias por contactarnos</li>
-                <li>Sé que todo se solucionará</li>
-                <li>Agradezco su comunicación</li>
-                <li>Gracias por alertarnos sobre este error</li>
-                <li>Espero haber sido de ayuda</li>
-                <li>Estamos para servirle</li>
-                <li>Me alegra haber podido asistirle</li>
-                <li>Esperamos volver a atenderle pronto</li>
-                <li>Quedo a su disposición para cualquier otra consulta</li>
-            </ul>
+            <div class="text">
+                <h2>Frases de Cierre</h2>
+                <ul>
+                    <li>Qué bueno fue poder ayudarlo/a</li>
+                    <li>Gracias por su tiempo</li>
+                    <li>Agradezco su paciencia</li>
+                    <li>Sé que no volverá a ocurrir</li>
+                    <li>Fue muy importante brindarle apoyo</li>
+                    <li>Gracias por contactarnos</li>
+                    <li>Sé que todo se solucionará</li>
+                    <li>Agradezco su comunicación</li>
+                    <li>Gracias por alertarnos sobre este error</li>
+                    <li>Espero haber sido de ayuda</li>
+                    <li>Estamos para servirle</li>
+                    <li>Me alegra haber podido asistirle</li>
+                    <li>Esperamos volver a atenderle pronto</li>
+                    <li>Quedo a su disposición para cualquier otra consulta</li>
+                </ul>
+            </div>
+            <img src="imagen12.png" alt="Cierre">
         </div>
 
         <!-- Sección de Palabras y Frases a Evitar -->
         <div class="section">
-            <h2>Palabras y Frases a Evitar</h2>
-            <ul>
-                <li>Entiendo</li>
-                <li>Lamento</li>
-                <li>Comprendo</li>
-                <li>A otros clientes también les pasa</li>
-                <li>Ah ok</li>
-                <li>Disculpe</li>
-                <li>Gracias por la espera</li>
-                <li>No se preocupe</li>
-                <li>Eso yo no lo veo</li>
-                <li>¿Entendió?</li>
-                <li>Le voy a otra área</li>
-                <li>Mil disculpas</li>
-                <li>Le pido disculpas</li>
-                <li>Eso estaba en su contrato</li>
-                <li>No es culpa mía</li>
-                <li>¿Me entiende?</li>
-            </ul>
+            <div class="text">
+                <h2>Palabras y Frases a Evitar</h2>
+                <ul>
+                    <li>Entiendo</li>
+                    <li>Lamento</li>
+                    <li>Comprendo</li>
+                    <li>A otros clientes también les pasa</li>
+                    <li>Ah ok</li>
+                    <li>Disculpe</li>
+                    <li>Gracias por la espera</li>
+                    <li>No se preocupe</li>
+                    <li>Eso yo no lo veo</li>
+                    <li>¿Entendió?</li>
+                    <li>Le voy a otra área</li>
+                    <li>Mil disculpas</li>
+                    <li>Le pido disculpas</li>
+                    <li>Eso estaba en su contrato</li>
+                    <li>No es culpa mía</li>
+                    <li>¿Me entiende?</li>
+                </ul>
+            </div>
+            <img src="imagen13.png" alt="Evitar">
         </div>
 
         <!-- Botón para Iniciar el Juego -->
